--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^2.3.0",
     "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.9.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.3"
   }
